Fix alignment

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1148,7 +1148,7 @@ body {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   max-width: 100%;
-  max-height: 220px;
+  max-height: 320px;
 }
 .view-item__ul li {
   margin: 10px 0 0 0;
